[gd_scene load_steps=7 format=3 uid="uid://dcrba05bgk54a"]

[ext_resource type="Script" path="res://entities/drops/drop.gd" id="1_34g2m"]
[ext_resource type="Texture2D" uid="uid://dauq2atfo4vw2" path="res://entities/drops/drop.png" id="1_uskp0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6m1i5"]

[sub_resource type="Gradient" id="Gradient_uumxa"]
offsets = PackedFloat32Array(0.824666, 1)
colors = PackedColorArray(0, 0, 0, 0.470588, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qkmvc"]
gradient = SubResource("Gradient_uumxa")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_alla8"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = false

[node name="drop" type="Node3D"]
script = ExtResource("1_34g2m")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 9
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_6m1i5")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.335914, 0)
texture = ExtResource("1_uskp0")

[node name="ShadowDecal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
size = Vector3(0.9, 0.2, 0.5)
texture_albedo = SubResource("GradientTexture2D_qkmvc")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_alla8")

[connection signal="area_entered" from="Area3D" to="." method="_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_body_entered"]
